@@ -1,6 +1,6 @@
 % File src/library/base/man/chol2inv.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2015 R Core Team
+% Copyright 1995-2020 R Core Team
 % Distributed under GPL 2 or later
 
 \name{chol2inv}
@@ -19,7 +19,7 @@ chol2inv(x, size = NCOL(x), LINPACK = FALSE)
     contain the Choleski decomposition of the matrix to be inverted.}
   \item{size}{the number of columns of \code{x} containing the
     Choleski decomposition.}
-  \item{LINPACK}{logical.  Defunct and ignored (with a warning for true value).}
+  \item{LINPACK}{logical.  Defunct and gives an error.}
 
 }
 \value{
