@@ -1,6 +1,6 @@
 % File src/library/base/man/svd.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2017 R Core Team
+% Copyright 1995-2020 R Core Team
 % Distributed under GPL 2 or later
 
 \name{svd}
@@ -22,7 +22,7 @@ La.svd(x, nu = min(n, p), nv = min(n, p))
     This must between \code{0} and \code{n = nrow(x)}.}
   \item{nv}{the number of right singular vectors to be computed.
     This must be between \code{0} and \code{p = ncol(x)}.}
-  \item{LINPACK}{logical.  Defunct and ignored.}
+  \item{LINPACK}{logical.  Defunct and an error.}
 }
 \details{
   The singular value decomposition plays an important role in many
